--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ github_api_version=1.114
 
 # Mod Properties
 mod_version=1.4-BETA+1.18
-maven_group=io.github.lucaargolo
+maven_group=com.github.Fourmisain
 
 # Fabric Properties
 minecraft_version=1.18.2
