--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ github_api_version=1.314
 
 # Mod Properties
 mod_version=2.2.1+1.19.4
-maven_group=io.github.lucaargolo
+maven_group=com.github.Fourmisain
 
 # Fabric Properties
 minecraft_version=1.19.4
